--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ footer{
 a{
     text-decoration: none;
     color: var(--primary-color);
+    font-weight: bold;
 }
 
 @media (min-width: 768px) {
